--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "ankou"
 description = "An OSINT repo miner focused on high-sev security bug"
-version = "0.1.0"
+repository = "https://github.com/drtychai/jsc-sys"
+version = "0.0.1"
 authors = ["bynx <drtychai@protonmail.com>"]
+license = "AGPL-3.0"
 edition = "2018"
 
 [lib]
@@ -13,9 +15,11 @@ name = "ak"
 path = "src/main.rs"
 
 [dependencies]
+log = "0.4.11"
 simple_logger ="1.11.0"
-structopt = "*"
+structopt = "0.3.21"
+reqwest = { version = "0.10", features = ["blocking", "json"] }
 
+# Git system bindings
 time = "0.1.44"
 git2 = "0.13.12"
-reqwest = { version = "0.10", features = ["blocking", "json"] }
