--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,11 @@ path = "src/main.rs"
 [dependencies]
 log = "0.4.11"
 simple_logger ="1.11.0"
-structopt = "0.3.21"
+
+clap = "*"
+paw = "1.0.0"
+structopt = { version = "0.3.21", features = ["paw"] }
+
 reqwest = { version = "0.10", features = ["blocking", "json"] }
 
 # Git system bindings
