--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,20 @@
 [package]
 name = "ankou"
-description = "An OSINT repo miner focused on high-sev security bug"
-repository = "https://github.com/drtychai/jsc-sys"
-version = "0.0.1"
+description = "An OSINT repo miner focused on high-sev security bug in JS engines"
+repository = "https://github.com/drtychai/ankou"
+version = "0.0.2"
 authors = ["bynx <drtychai@protonmail.com>"]
 license = "AGPL-3.0"
 edition = "2018"
+exclude = [
+    "**/*.yml",
+    "**/WebKit",
+    "**/chromium",
+    "**/gecko-dev",
+]
 
 [lib]
+name = "ankou"
 path = "src/lib.rs"
 
 [[bin]]
@@ -18,10 +25,11 @@ path = "src/main.rs"
 log = "0.4.11"
 simple_logger ="1.11.0"
 
-clap = "*"
+# CLI Args
 paw = "1.0.0"
 structopt = { version = "0.3.21", features = ["paw"] }
 
+# Async HTTP
 reqwest = { version = "0.10", features = ["blocking", "json"] }
 
 # Git system bindings
